XO_Project_UAT/Project--XOGrp--UAT/src/objects/n2de__Out_of_office__c.object
<CustomObject>
    <description>Team member out of office</description>
    <fields>
        <fullName>n2de__End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>n2de__End_datetime__c</fullName>
        <label>End datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__End_hour__c</fullName>
        <label>End hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__End_is_all_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End is all day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__End_min__c</fullName>
        <label>End min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Queue_id__c</fullName>
        <inlineHelpText>Id of queue if this is out of office for a Queue.</inlineHelpText>
        <label>Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>n2de__Start_datetime__c</fullName>
        <label>Start datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Start_hour__c</fullName>
        <label>Start hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Start_is_all_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start is all day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Start_min__c</fullName>
        <label>Start min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Timezone__c</fullName>
        <label>Timezone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Out_of_office</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Username__c</fullName>
        <formula>n2de__User__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>Out of office</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>n2de__End_date__c</columns>
        <columns>n2de__End_datetime__c</columns>
        <columns>n2de__End_is_all_day__c</columns>
        <columns>n2de__Queue_id__c</columns>
        <columns>n2de__Start_date__c</columns>
        <columns>n2de__Start_datetime__c</columns>
        <columns>n2de__Start_is_all_day__c</columns>
        <columns>n2de__Timezone__c</columns>
        <columns>n2de__User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reason</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Out of office</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>